--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ datasets
 evaluate
 pytest
 scikit-learn
-torch
-torchvision
 tensorboard
+torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1 --index-url https://download.pytorch.org/whl/cu118
 
